--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ header{
   border-bottom: 3px solid #50C7C7;
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
 
   /*Your  code here again.*/
@@ -33,10 +32,9 @@ header{
 .price{
     min-height: 500px;
     display: flex;
-    flex-direction: column;
+    flex-wrap: flex;
     align-items: center;
     justify-content: center;
-    aligh-self: center;
     /*Your code here*/
     /*You must use flex.
     /*Don't forget to vertically and horizontally 
@@ -51,7 +49,6 @@ header{
   padding: 0 0 50px 0;
   display: flex;
   flex-basis: 400px;
-  width: 400px;
   flex-direction: column;
   /*Your code here.*/
   /*Take a look at flex-basis*/
@@ -60,7 +57,7 @@ header{
 
 /*Requirement 6*/
 
-.package > header{ 
+div.package > header{ 
     background: #288080;
     border: 2px solid #45ADAD;
     padding: 20px 0;
@@ -72,10 +69,9 @@ header{
 .gallery{
   min-height: 600px;
   display: flex;
-  justify-content: space-evenly;
-  flex-flow: row;
-  align-items: center;
-  align-self: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: stretch;
 
   /*Your code here again.*/
 
@@ -92,6 +88,10 @@ header{
 
 /*Requirement 9*/
 #logo{
+  -webkit-animation: logo_grow;
+  animation-name: logo_grow;
+  -webkit-animation-duration: 15s;
+  -webkit-animation-iteration-count: 1;
   animation-duration: 15s;
   animation-iteration-count: 1;
 
@@ -102,26 +102,15 @@ header{
 
 /*Keyframes for animation*/
 @-webkit-keyframes logo_grow{
-
-  0% {
-    width: 25px;
-  }
-  100% {
-    width: 420px;
-  }
-  /*Your code here.*/
+  from {width: 25px; opacity: 0;}
+  to {width: 420px; opacity: 1;}
 
 }
 
 @keyframes logo_grow{
 
-  0%{
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
+  from {width: 25px; opacity: 0;}
+  to {width: 420px; opacity: 1;}
   /*Your code here.*/
 } 
 
@@ -133,24 +122,20 @@ header{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items:left;
 
     /*Your code here again.*/  
   }
 
   /*Requirement 10*/
   .nav_links{
-    display: flex;
     flex-direction: row;
-    justify-content: flex-end;
-    align-items:center;
     /*Your code here again.*/  
   }
 
   /*Requirement 11*/
   .package {
-    display:flex;
-    flex-direction: column;
-    width:230px;
+    flex-basis: 230px;
     
 
     /*Your code here again.*/
@@ -187,7 +172,7 @@ header{
     justify-content: space-evenly;
   }
   .price{
-    vertical-align:bottom;
+    align-items: flex-end;
 
   }
   .package{
@@ -197,6 +182,10 @@ header{
     border-color: #45ADAD;
     border-width: 2px;
   }
+   .gallery, #gallery{
+    display: flex;
+  }
+}
 
   /*Requirement 13*/
   /*Requirement 14*/
@@ -205,5 +194,5 @@ header{
   /*Requirement 17*/
   /*Requirement 18*/
  
-}
+
 
